--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,8 @@
 	st = status
 	br = branch
 	ci = commit
-	co = checkout
+    co = checkout
+    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
 [color]
     branch = auto
     diff   = auto
