--- a/.gitconfig
+++ b/.gitconfig
@@ -2,12 +2,18 @@
 	name = Chris Gilmer
 	email = chris.gilmer@gmail.com
 [github]
-	user = chrisgilmerproj
+    user = chrisgilmerproj
+[core]
+    editor = vim
+    whitespace = space-before-tab,trailing-space
+[diff]
+    tool = vimdiff
 [alias]
 	st = status
 	br = branch
 	ci = commit
     co = checkout
+    df = diff
     lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
 [color]
     branch = auto
@@ -15,5 +21,3 @@
     interactive = auto
 	status = auto
     ui = auto
-[core]
-    editor = vim
