Updated ackrc to put types on same line

--- a/.ackrc
+++ b/.ackrc
@@ -1,8 +1,4 @@
---type-add
-csv=.csv
---type-add
-md=.md
---type-add
-rst=.rst
---type-add
-jade=.jade
+--type-add=csv=.csv
+--type-add=md=.md
+--type-add=rst=.rst
+--type-add=jade=.jade
