Added a new alias to git and updated vimrc

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,7 @@
     co = checkout
     df = diff
     lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+    yd = diff "@{yesterday}"
 [color]
     branch = auto
     diff   = auto
