Added an alias for git to clean repo called prune

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,7 @@
     df = diff
     lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
     yd = diff "@{yesterday}"
+    prune = gc --prune=now
 [color]
     branch = auto
     diff   = auto
