--- a/.gitconfig
+++ b/.gitconfig
@@ -14,7 +14,7 @@
     ci = commit
     co = checkout
     df = diff
-    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+    lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
     yd = diff "@{yesterday}"
     prune = gc --prune=now
 [color]
