--- a/.screenrc
+++ b/.screenrc
@@ -13,8 +13,8 @@
 #deflogin on
 #autodetach off
 
-vbell on
-vbell_msg "   Wuff  ----  Wuff!!  "
+vbell off
+#vbell_msg "   Wuff  ----  Wuff!!  "
 
 # all termcap entries are now duplicated as terminfo entries.
 # only difference should be the slightly modified syntax, and check for
