--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 # Python Requirements
 Django==1.4.1
 SQLAlchemy==0.7.8
+astropy==0.1
+distribute==0.6.28
+git-remote-helpers==0.1.0
 ipython==0.13
 pep8==1.3.3
+numpy==1.6.2
 psycopg2==2.4.5
 pyflakes==0.5.0
+scipy==0.11.0
 virtualenv==1.7.2
 wsgiref==0.1.2
