--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/bundle/vundle"]
 	path = .vim/bundle/vundle
-	url = git://github.com/gmarik/vundle.git
+    url = git://github.com/gmarik/vundle.git
+[submodule ".vim/colors/monokai"]
+    path = .vim/colors/monokai
+    url = git://github.com/sickill/vim-monokai.git
