--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,13 @@
 ForwardAgent yes
 GSSAPIAuthentication no
 StrictHostKeyChecking no
+
+Host website.local
+    HostName 127.0.0.1
+    User deploy
+    Port 2222
+
+Host testv-cgilmer.local
+    HostName 127.0.0.1
+    User deploy
+    Port 2222
