--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule ".vim/bundle/vundle"]
-	path = .vim/bundle/vundle
-    url = git://github.com/gmarik/vundle.git
 [submodule ".vim/colors/monokai"]
     path = .vim/colors/monokai
     url = git://github.com/sickill/vim-monokai.git
+[submodule ".vim/bundle/syntastic"]
+    path = .vim/bundle/syntastic
+    url = git://github.com/scrooloose/syntastic.git
+[submodule ".vim/bundle/nerdtree"]
+    path = .vim/bundle/nerdtree
+    url = git://github.com/scrooloose/nerdtree.git
