--- a/.gitconfig
+++ b/.gitconfig
@@ -20,6 +20,7 @@
     contrib = blame
 	shorty = status --short --branch
 	commend = commit --amend --no-edit
+	unadd = reset HEAD
 [color]
     branch = auto
     diff   = auto
