--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,41 @@
-# remap prefix from C-b to C-a to match screen
-set -g prefix C-a
-
+# Set prefix key to Ctrl-a
 unbind-key C-b
+set-option -g prefix C-a
+
+# send the prefix to client inside window
 bind-key C-a send-prefix
+
+# toggle last window like screen
+bind-key C-a last-window
+
+# scrollback buffer n lines
+set -g history-limit 5000
+
+# listen for activity on all windows
+#set -g bell-action any
+set -g bell-action none
+
+# instructs tmux to expect UTF-8 sequences
+setw -g utf8 on
+sest -g utf8 on
+
+# tell tmux to use 256 colour terminal
+set -g default-terminal "screen-256color"
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind-key R source-file ~/.tmux.conf
+
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
