--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
 [core]
     editor = vim
     whitespace = space-before-tab,trailing-space
+    excludesfile = /Users/cgilmer/.gitignore_global
 [diff]
     tool = vimdiff
 [alias]
