--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,7 @@
     undo = reset --soft HEAD~1
     ocmmit = commit
     rev = rev-parse --verify HEAD
+    skip = update-index --skip-worktree
 [color]
     branch = auto
     diff   = auto
