--- a/.inputrc
+++ b/.inputrc
@@ -9,8 +9,8 @@ set output-meta on
 # for linux console and RH/Debian xterm
 "\e[1~": beginning-of-line
 "\e[4~": end-of-line
-"\e[5~": history-search-backward
-"\e[6~": history-search-forward
+#"\e[5~": history-search-backward
+#"\e[6~": history-search-forward
 #"\e[5~": beginning-of-history
 #"\e[6~": end-of-history
 "\e[7~": beginning-of-line
@@ -33,3 +33,12 @@ set output-meta on
 # for freebsd console
 "\e[H": beginning-of-line
 "\e[F": end-of-line
+
+# By default up/down are bound to previous-history and next-history
+# respectively. The following does the same but gives the extra functionality
+# where if you type any text (or more accurately, if there is any text between
+# the start of the line and the cursor), the subset of the history starting with
+# that text is searched (like 4dos for e.g.).
+# Note to get rid of a line just Ctrl-C
+"\e[B": history-search-forward
+"\e[A": history-search-backward
