Remove old hosts from .ssh/config example and add example config for blocked ssh access to github

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,12 +2,10 @@ ForwardAgent yes
 GSSAPIAuthentication no
 StrictHostKeyChecking no
 
-Host website.local
-    HostName 127.0.0.1
-    User deploy
-    Port 2222
+Host *
+    UseKeychain yes
 
-Host testv-cgilmer.local
-    HostName 127.0.0.1
-    User deploy
-    Port 2222
+# If ssh is blocked at a coffee shop use this config
+# Host github.com
+#   Hostname ssh.github.com
+#   Port 443
