--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
     name = Chris Gilmer
-    email = chris@truss.works
+    email = chris.gilmer@gmail.com
     # Keybase
     signingkey = 9B9B5634A88AB754
     # Yubikey
