--- a/.gitconfig
+++ b/.gitconfig
@@ -39,6 +39,8 @@
     last = "rev-parse --short --verify HEAD"
     main = !git init && git checkout -b main
     whereami = \\!git reflog | grep -E 'moving from (.*)' -m 30 -o | awk '{print $5}' | awk '\\!visited[$0]++'
+    deletetag = push --delete origin
+    yolo = !git commit -m \"$(curl -s whatthecommit.com/index.txt)\"
 [color]
     branch = auto
     diff   = auto
