--- a/.direnvrc
+++ b/.direnvrc
@@ -7,6 +7,8 @@ layout_poetry() {
   fi
 
   # create venv if it doesn't exist
+  unset VIRTUAL_ENV
+  unset POETRY_ACTIVE
   poetry run true
 
   export VIRTUAL_ENV=$(poetry env info --path)
