--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "cdk": "^2.29.1",
-    "create-next-app": "^12.2.0"
+    "create-next-app": "^12.2.0",
+    "create-playwright": "^1.17.126"
   }
 }
